--- a/style.css
+++ b/style.css
@@ -28,8 +28,9 @@ body{
     padding: 1em;
     width: 300px;
     margin-bottom: auto;
-    border: 0.1px solid black;
-    background-color: rgb(236, 236, 236);
+    border: 1px solid black;
+    background-color: rgb(245, 245, 245);
+    border-radius: 15px;
 }
 
 
@@ -46,6 +47,7 @@ body{
     flex-direction: row;
     margin-bottom: 15px;
     font-size: 2em;
+    background-color: white;
 }
 
 
